@@ -1,5 +1,8 @@
 2017-12-25  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/popup/popup.css:
+	Modify some styles.
+
 	* tryXpath/manifest.json:
 	Change version. 1.2.0 -> 1.3.0b1
 
